2016-02-06 Franz Holzinger  <franz@ttproducts.de>
	* bug fix: make the images generated correctly by moving the Images folder into Documentation/ExtMasterTemplate/
	* rename manual_html_2d0df56f.png into manual_install_extension.png
	* rename manual_html_m2986e6f2.png into manual_install_extension_2.png
	* rename manual_html_62e0db56.png into manual_css_styled_content.png

2016-01-18 Franz Holzinger  <franz@ttproducts.de>
	* expected to work until TYPO3 7.99

2015-09-29 Franz Holzinger  <franz@ttproducts.de>
	* Support for TYPO3 7.4

2015-09-19 Franz Holzinger  <franz@ttproducts.de>
	* Comment out select.languageField in order to show the content in all languages
	* bug fix: add float=left to the content div. Otherwise the text of the right column will be below the content.
	* add Sphinx Documentation

2014-10-22 Franz Holzinger  <franz@ttproducts.de>
	* specific extension icon

2013-08-28 Franz Holzinger  <franz@ttproducts.de>
	* ready for TYPO3 6.2

2013-06-22 Franz Holzinger  <franz@ttproducts.de>
	* activate utf-8 as default encoding
	* compatible with TYPO3 6.1

2011-12-21 Franz Holzinger  <franz@ttproducts.de>
	* remove dependancy on the statictemplates and include the setup.txt and constants.txt manually

2011-10-14 Franz Holzinger  <franz@ttproducts.de>
	* detailed installation tutorial inside of the manual

2010-12-07 Franz Holzinger  <franz@ttproducts.de>

	* Remove not needed master constants.txt, because this is part of the database record

2010-11-27 Franz Holzinger  <franz@ttproducts.de>

	* support for planned patch #16278 to use a hook for the INSERT into static_template
	* activate the SUBMENU which is copied into temp.left
	* comment out the tt_content improvements and the 2-3 columns switch by default
	* use the constant mastertemplate.path instead of path
	* add a default constants for editing with the Constants Editor

2010-10-26 Franz Holzinger  <franz@ttproducts.de>

	* add INSERT to static_template