@@ -1,7 +1,27 @@
 ﻿
 
+.. |img-3|      image:: ../../Images/manual_install_extension.png
+   :height: 170
+   :width: 669
+.. :align: left
+.. :border: 0
+.. :name: Grafik1
 
 
+.. |img-4|      image:: ../../Images/manual_install_extension_2.png
+   :height: 102
+   :width: 669
+.. :align: left
+.. :border: 0
+.. :name: Grafik3
+
+
+.. |img-5|      image:: ../../Images/manual_css_styled_content.png
+   :height: 135
+   :width: 669
+.. :align: left
+.. :border: 0
+.. :name: Grafik4
 
 .. |img-6|      image:: ../../Images/manual_html_159e02ca.png
    :height: 246
