@@ -1,0 +1,30 @@
+# coding: utf-8
+
+# #####
+#
+# Settings.cfg - Master Template Configuration File
+#
+# About Syntax:
+#   See https://docs.python.org/2/library/configparser.html
+#
+# Put comments in separate lines!
+#
+# #####
+
+
+# Attention:
+#    LEAVE RIGHT SIDE EMPTY for a 'false' value like:
+#       example_of_false_value =
+
+
+[general]
+
+project     = Master Template
+version     = 0.3
+release     = 0.3.4
+t3author    = Franz Holzinger
+copyright   = Copyright since 2014 by Franz Holzinger
+
+description = This extension makes available the setup of the master template.
+   Use this to build you TYPO3 website. You only must adapt the CSS files to your needs.
+
