@@ -1,38 +1,35 @@
 <?php
 
-/**
- * Extension Manager/Repository config file for ext "mastertemplate".
- *
- * Auto generated 09-02-2016 11:40
- *
- * Manual updates:
- * Only the data in the array - everything else is removed by next
- * writing. "version" and "dependencies" must not be touched!
- */
+########################################################################
+# Extension Manager/Repository config file for ext "mastertemplate".
+#
+#
+# Manual updates
+########################################################################
 
 $EM_CONF[$_EXTKEY] = array(
 	'title' => 'Master Template',
 	'description' => 'This extension makes available the setup of the master template. Originally developed by the NRW user group.',
 	'category' => 'templates',
-	'shy' => 1,
-	'version' => '0.3.3',
-	'priority' => '',
-	'loadOrder' => '',
-	'module' => '',
-	'state' => 'stable',
-	'uploadfolder' => 1,
-	'createDirs' => '',
-	'modify_tables' => '',
-	'clearcacheonload' => 1,
-	'lockType' => '',
 	'author' => 'Franz Holzinger',
 	'author_email' => 'franz@ttproducts.de',
+	'shy' => '',
+	'dependencies' => '',
+	'conflicts' => '',
+	'priority' => '',
+	'module' => '',
+	'state' => 'stable',
+	'internal' => '',
+	'uploadfolder' => 0,
+	'createDirs' => '',
+	'modify_tables' => '',
+	'clearCacheOnLoad' => 0,
+	'lockType' => '',
 	'author_company' => 'jambage.com',
-	'CGLcompliance' => '',
-	'CGLcompliance_note' => '',
+	'version' => '0.4.0',
 	'constraints' => array(
 		'depends' => array(
-			'typo3' => '4.4.0-7.99.99',
+			'typo3' => '7.6.0-8.99.99',
 		),
 		'conflicts' => array(
 		),
