@@ -1,7 +1,6 @@
 ##
 ## @package TYPO3
 ## @subpackage mastertemplate
-## @version $Id: constants.txt 55778 2011-12-21 10:32:44Z franzholz $
 ##
 
 
