@@ -1,27 +1,26 @@
 ##
 ## @package TYPO3
 ## @subpackage mastertemplate
-## @version $Id: setup.txt 39538 2010-10-26 19:47:47Z franzholz $
 ##
 
 temp.footer = COA
 temp.footer {
-	10 = HMENU
-	10 {
-		special = directory
-		special.value = 10
-		1 = TMENU
-		1 {
-			noBlur = 1
-			wrap = <ul>| </ul>
-			NO {
-				wrapItemAndSub = <li> | </li>
-			}
-			ACT < .NO
-			ACT = 1
-			#ACT.ATagParams = class="menu_act_a"
-		}
-	}
-	#999 = TEXT
-	#999.value=footer
+    10 = HMENU
+    10 {
+        special = directory
+        special.value = 10
+        1 = TMENU
+        1 {
+            noBlur = 1
+            wrap = <ul>| </ul>
+            NO {
+                wrapItemAndSub = <li> | </li>
+            }
+            ACT < .NO
+            ACT = 1
+            #ACT.ATagParams = class="menu_act_a"
+        }
+    }
+    #999 = TEXT
+    #999.value=footer
 }
