@@ -1,3 +1,10 @@
+2017-07-28 Franz Holzinger  <franz@ttproducts.de>
+	* return to the documenation format to use the |img-no| placeholders and the Images.txt file
+	* remove the doc folder and its file manual.sxw
+    * remove config setup: #baseURL = http://domain/ #absRefPrefix = http://domain/
+    * add config setup: absRefPrefix = auto
+    * support for TYPO3 8.7 and fluid_styled_content. see Stackoverflow: Typo3 styles.content.getLeft
+
 2016-02-06 Franz Holzinger  <franz@ttproducts.de>
 	* bug fix: make the images generated correctly by moving the Images folder into Documentation/ExtMasterTemplate/
 	* rename manual_html_2d0df56f.png into manual_install_extension.png
